Last minute update.

--- a/benchmark-paper/conclusion.tex
+++ b/benchmark-paper/conclusion.tex
@@ -23,7 +23,7 @@ runtime, as all power consumptions were found comparable. The
 classifiers, with runtimes in the order of 0.35~ms/element, a performance not compatible 
 with common sampling frequencies of wearable sensors. 
 
-Future research will focus on reducing the memory requirements and runtime
+Future research \revision{should} focus on reducing the memory requirements and runtime
 of the \hoeffdingtree and the \mondrianforest classifiers. In addition to
 improving the deployability of these classifiers on connected objects, this
 would also potentially improve their classification performance, since
