Rewrite limitation of state of the art.

--- a/benchmark-paper/introduction.tex
+++ b/benchmark-paper/introduction.tex
@@ -144,15 +144,9 @@ classification accuracy. It shows the superiority of the proposed \FNN over
 \knn.
 
 \revision{
-\subsection{Limitation of this study}
-This study shows some limitations compare to the state of the art. It studies
-\har related to sports activities such as push-up, pull-up, or squat, which
-excludes daily activities and the field of Ambient Assisted Living. Additionally,
-the study focuses on wearable sensors worn on the forearm. Also, the sensor
-count is not important compares to papers with more than 50
-sensors~\cite{HAR_daily_1, HAR_daily_3, HAR_daily_2}. Finally, the experiment is
-run on a regular computer, so even though comparison between algorithm is valid, we
-may miss behavior related to the device's environment, especially, regarding the
-power usage.
+In this study, we focus on \har with wearable sensor data processed with data
+streams classifiers and we provided a kernel independant library that could be
+deployed on connected objects. To our knowledge, this is the first benchmark
+known in this context.
 }
 % vim: tw=80 ts=2
