--- a/benchmark-paper/introduction.tex
+++ b/benchmark-paper/introduction.tex
@@ -74,7 +74,7 @@ HAR_daily_3, HAR_daily_2}. These studies describe how they have collected
 datasets from heterogeneous sensor networks located in appartments. Except for
 the Opportunity datasets shown in~\cite{HAR_daily_2}, the data were collected
 from sensor placed in various daily objects such as the entrance door or the
-cupboard. The Opportunity dataset have, in addition, wearable sensors placed on
+cupboard. The Opportunity dataset has, in addition, wearable sensors placed on
 the subjects. These papers also provide a baseline F1-score with popular
 classifiers (\naivebayes, \knn, and neural network).
 }
