Update caption of the scoring table (table 3).

--- a/benchmark-paper/results.tex
+++ b/benchmark-paper/results.tex
@@ -78,7 +78,7 @@ Mondrian 50 tree(s) (RAM x5.0) &       &       &       & 0.107 & 0.593 & \\
 \end{tabular}                                                          
 }
 
-\caption{\revision{The last F1 scores for each dataset.}}
+\caption{\revision{The average F1 score obtained on the last data point.}}
 \label{tab:f1}
 \end{center}
 \end{table}
