Update title of the reproducibility section.

--- a/method.tex
+++ b/method.tex
@@ -352,10 +352,11 @@ algorithms with the \textit{perf} command. The power measurement is done
 multiple times in a minimal environment. We use the empty classifier as a
 baseline.
 
-\subsection{Experimental Conditions \revision{and Reproducibility}}
+\subsection{Results Reproducibility}
 \revision{
 The code and datasets used in this study are available on Github at
-\url{https://github.com/big-data-lab-team/benchmark-har-data-stream.git}.
+\url{https://github.com/big-data-lab-team/benchmark-har-data-stream.git}. We
+used the release 1.0 and the DOI is \href{https://doi.org/10.5281/zenodo.4148947}{10.5281/zenodo.4148947}.
 The repository contains the source code and data we used to run the experiment, including the Makefile to compile the benchmark, the Python script
  to organize the execution and plot the results, and the
 datasets. This experiment requires the following software to run properly. \TG{make a bullet list}
