Update bibtex file.

--- a/paper.bib
+++ b/paper.bib
@@ -263,7 +263,7 @@ series = {CoNEXT ’14}
 	pages = {1733-1742},
 	title = {{Extremely Fast Decision Tree Mining for Evolving Data Streams}},
 	doi = {10.1145/3097983.3098139},
-	booktitle = {{Proceedings of the 23rd ACM SIGKDD International Conference on Knowledge Discovery and Data Mining - KDD '17}},
+	journal = {{P}roceedings of the 23rd {ACM} {SIGKDD} {I}nternational {C}onference on {K}nowledge {D}iscovery and {D}ata {M}ining - {KDD} '17},
 	publisher = {{ACM} Press}
 }
 @article{survey_supervised_ML,
@@ -383,7 +383,7 @@ series = {CoNEXT ’14}
   year={2013},
   publisher={Springer}
 }
-@inproceedings{issues_learning_from_stream,
+@article{issues_learning_from_stream,
 	author = {Gama, Jo\~{a}o and Sebasti\~{a}o, Raquel and Rodrigues, Pedro Pereira},
 	title = {{Issues in Evaluation of Stream Learning Algorithms}},
 	year = {2009},
@@ -392,7 +392,7 @@ series = {CoNEXT ’14}
 	address = {New York, NY, USA},
 	url = {https://doi.org/10.1145/1557019.1557060},
 	doi = {10.1145/1557019.1557060},
-	booktitle = {{P}roceedings of the 15th {ACM} {SIGKDD} {I}nternational {C}onference on {K}nowledge {D}iscovery and {D}ata {M}ining},
+	journal = {{P}roceedings of the 15th {ACM} {SIGKDD} {I}nternational {C}onference on {K}nowledge {D}iscovery and {D}ata {M}ining},
 	pages = {329–338},
 	numpages = {10},
 	keywords = {data streams, evaluation design},
@@ -815,10 +815,10 @@ series = {CoNEXT ’14}
   year={2016},
   publisher={ACM}
 }
-@inproceedings{OrpailleCC,
+@article{OrpailleCC,
   title={{O}rpaille{CC}: a {L}ibrary for {D}ata {S}tream {A}nalysis on {E}mbedded {S}ystems},
   author={Martin Khannouz and Bo Li and Tristan Glatard},
-  booktitle={The Journal of Open Source Software},
+  journal={The Journal of Open Source Software},
   month = {07},
   volume = {4},
   pages = {1485},
@@ -937,13 +937,13 @@ series = {CoNEXT ’14}
 	url = {https://doi.org/10.3390%2Fs17030529},
 	year = 2017,
 	month = {mar},
+	journal = {Sensors},
 	publisher = {{MDPI} {AG}},
 	volume = {17},
 	number = {3},
 	pages = {529},
 	author = {Majid Janidarmian and Atena Roshan Fekr and Katarzyna Radecka and Zeljko Zilic},
-	title = {{A Comprehensive Analysis on Wearable Acceleration Sensors in Human Activity Recognition}},
-	journal = {Sensors}
+	title = {{A} {C}omprehensive {A}nalysis on {W}earable {A}cceleration {S}ensors in {H}uman {A}ctivity {R}ecognition}
 }
 @article{stream_learning_review,
 	author = {Gomes, Heitor Murilo and Read, Jesse and Bifet, Albert and Barddal, Jean Paul and Gama, Jo\~{a}o},
@@ -963,9 +963,9 @@ series = {CoNEXT ’14}
 	numpages = {17}
 }
 
-@inproceedings{omid_2019,
+@article{omid_2019,
 	author={O. {Sarbishei}},
-	booktitle={2019 IEEE 5th World Forum on Internet of Things (WF-IoT)},
+	journal={2019 IEEE 5th World Forum on Internet of Things (WF-IoT)},
 	title={A Platform and Methodology Enabling Real-Time Motion Pattern Recognition on Low-Power Smart Devices},
 	month={April},
 	year={2019},
@@ -1011,7 +1011,7 @@ volume = {9},
 journal = {International Journal of Database Theory and Application},
 doi = {10.14257/ijdta.2016.9.9.19}
 }
-@InProceedings{kaur2020,
+@article{kaur2020,
 	author="Kaur, Amrinder
 	and Kumar, Rakesh",
 	editor="Sharma, Harish
@@ -1019,8 +1019,8 @@ doi = {10.14257/ijdta.2016.9.9.19}
 	and Poonia, Ramesh C.
 	and Kumar, Sandeep
 	and El-Medany, Wael M.",
-	title={{A Comprehensive Analysis of Classification Methods for Big Data Stream}},
-	booktitle={{A}dvances in {C}omputing and {I}ntelligent {S}ystems},
+	title={{A} {C}omprehensive {A}nalysis of {C}lassification {M}ethods for {B}ig {D}ata {S}tream}},
+	journal={{A}dvances in {C}omputing and {I}ntelligent {S}ystems},
 	year={2020},
 	publisher="Springer Singapore",
 	address="Singapore",
@@ -1037,9 +1037,9 @@ doi = {10.14257/ijdta.2016.9.9.19}
   doi = {10.1007/s12652-020-01934-y},
   publisher={Springer}
 }
-@InProceedings{ugulino2012,
+@inbook{ugulino2012,
 	author="Ugulino, Wallace and Cardador, D{\'e}bora and Vega, Katia and Velloso, Eduardo and Milidi{\'u}, Ruy and Fuks, Hugo",
-	title={{Wearable Computing: Accelerometers' Data Classification of Body Postures and Movements}},
+	title={{W}earable {C}omputing: {A}ccelerometers' {D}ata {C}lassification of {B}ody {P}ostures and {M}ovements},
 	booktitle="Advances in Artificial Intelligence - SBIA 2012",
 	year="2012",
 	publisher="Springer Berlin Heidelberg",
@@ -1068,9 +1068,9 @@ doi = {10.1109/TNSM.2020.2983921}
 }
 
 @article{mahmud2020human,
-  title={Human Activity Recognition from Wearable Sensor Data Using Self-Attention},
   author={Mahmud, Saif and Tonmoy, M and Bhaumik, Kishor Kumar and Rahman, AKM and Amin, M Ashraful and Shoyaib, Mohammad and Khan, Muhammad Asif Hossain and Ali, Amin Ahsan},
   journal={arXiv preprint arXiv:2003.09018},
+  title={Human Activity Recognition from Wearable Sensor Data Using Self-Attention},
   year={2020}
 }
 %4 HAR datasets: PAMAP2, USC-HAD, Opportunity, Skoda.
@@ -1093,7 +1093,7 @@ doi = {10.1109/TNSM.2020.2983921}
 	keywords = {Activity recognition, Convolutional Neural Networks, Wearable computing, Mobile sensing, Recurrent Neural Networks, Feature analysis, Hidden Markov Models, LongShort Term Memory}
 }
 
-@inbook{HAR_daily_1,
+@article{HAR_daily_1,
 	author = {van Kasteren, Tim and Englebienne, Gwenn and Krose, B.},
 	year = {2011},
 	month = {05},
@@ -1114,12 +1114,13 @@ doi = {10.1109/TNSM.2020.2983921}
 	journal = {Pattern Recognition Letters},
 	doi = {10.1016/j.patrec.2012.12.014}
 }
-@inbook{HAR_daily_3,
+@article{HAR_daily_3,
 	author = {Amato, Giuseppe and Bacciu, Davide and Chessa, Stefano and Dragone, Mauro and Gallicchio, Claudio and Gennaro, Claudio and Lozano, Hector and Micheli, Alessio and O'Hare, Gregory and Renteria, Arantxa and Vairo, Claudio},
 	year = {2016},
 	month = {01},
 	pages = {1-9},
 	title = {{A} {B}enchmark {D}ataset for {H}uman {A}ctivity {R}ecognition and {A}mbient {A}ssisted {L}iving},
+	journal = {{I}n {I}nternational {S}ymposium on {A}mbient {I}ntelligence},
 	isbn = {978-3-319-40113-3},
 	doi = {10.1007/978-3-319-40114-0_1}
 }
