--- a/introduction.tex
+++ b/introduction.tex
@@ -117,6 +117,7 @@ Opportunity dataset have, in addition, wearable sensors placed on the subjects.
 These papers also provide a baseline F1-score with popular classifiers
 (\naivebayes, \knn, and neural network).
 }
+
 % offline works
 Several studies evaluated classifiers for \har in an offline (non data stream)
 setting. In particular, the work in~\cite{Janidarmian_2017} compared 293
@@ -145,8 +146,8 @@ classification accuracy. It shows the superiority of the proposed \FNN over
 
 \revision{
 In this study, we focus on \har with wearable sensor data processed with data
-streams classifiers and we provided a kernel independant library that could be
+streams classifiers and we use OrpailleCC, an OS-independent library that could be
 deployed on connected objects. To our knowledge, this is the first benchmark
-known in this context.
+conducted in this context.
 }
 % vim: tw=80 ts=2
