--- a/results.tex
+++ b/results.tex
@@ -78,7 +78,7 @@ Mondrian 50 tree(s) (RAM x5.0) &       &       &       & 0.107 & 0.593 & \\
 \end{tabular}                                                          
 }
 
-\caption{\revision{The average F1 score obtained on the last data point.}}
+\caption{\revision{Average F1 scores obtained on the last data point of the stream.}}
 \label{tab:f1}
 \end{center}
 \end{table}
