Fix a few typo.

--- a/introduction.tex
+++ b/introduction.tex
@@ -119,7 +119,8 @@ These papers also provide a baseline F1-score with popular classifiers
 }
 
 % offline works
-Several studies evaluated classifiers for \har in an offline (non data stream)
+\revision{Several other studies evaluated classifiers for \har with sport
+activities} in an offline (non data stream)
 setting. In particular, the work in~\cite{Janidarmian_2017} compared 293
 classifiers using various sensor placements and window sizes, concluding on the
 superiority of k nearest neighbors (\knn) and pointing out a trade-off between
