--- a/method.tex
+++ b/method.tex
@@ -362,7 +362,7 @@ The repository contains the source code and data we used to run the experiment, 
  to organize the execution and plot the results, and the
 datasets. This experiment requires the following software to run properly.
 \begin{itemize}
-		\item \texttt{Git} to download the repository and its submodule.
+		\item \texttt{Git} to download the repository and its submodules.
 		\item \texttt{gcc} or any C++ compiler in combination with \texttt{make} to compile the benchmark binaries.
 		\item \texttt{log4cpp} as a dependency of \streamdmcpp.
 		\item \texttt{Python}, \texttt{seaborn}, \texttt{matplotlib}, and
